Bug 112127 - -r/+r and -R/+R channel mode changes are not shown
Summary: -r/+r and -R/+R channel mode changes are not shown
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-09-06 18:51 UTC by Francis Giannaros
Modified: 2005-09-24 19:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Francis Giannaros 2005-09-06 18:51:56 UTC
Version:           0.18 (using KDE KDE 3.4.2)
Installed from:    Unspecified Linux
OS:                Linux

Change the channel mode to +R, and Konversation gives no output or indication that it has changed.
Comment 1 Peter Simonsson 2005-09-24 19:01:45 UTC
SVN commit 463640 by psn:

Bug fix from Lothar Braun. Show all channel mode changes.

BUG:112127


 M  +14 -3     channel.cpp  


--- trunk/extragear/network/konversation/src/channel.cpp #463639:463640
@@ -1400,7 +1400,7 @@
             }
             break;
 
-        case 'O': break;
+	//case 'O': break;
 
         case 'v':
             if(plus)
@@ -1537,7 +1537,7 @@
             if(plus) modeP->setDown(false);
             break;
 
-        case 'r': break;
+	//case 'r': break;
 
         case 't':
             if(plus)
@@ -1553,7 +1553,7 @@
             modeT->setDown(plus);
             break;
 
-        case 'k': break;
+        //case 'k': break;
 
         case 'l':
             if(plus)
@@ -1609,6 +1609,17 @@
                 else message=i18n("%1 removes the invitation mask %2.").arg(sourceNick).arg(parameter);
             }
             break;
+        default:
+	    if(plus)
+	    {
+	        if(fromMe) message=i18n("You set channel mode +%1").arg(mode);
+		else message=i18n("%1 sets channel mode +%2").arg(sourceNick).arg(mode);
+	    }
+	    else
+	    {
+	        if (fromMe) message=i18n("You set channel mode -%1").arg(mode);
+		else message= i18n("%1 sets channel mode -%2").arg(sourceNick).arg(mode);
+	    }
     }
 
     if(!message.isEmpty() && !Preferences::useLiteralModes())