Bug fix from Lothar Braun. Show all channel mode changes.

BUG:112127

svn path=/trunk/extragear/network/konversation/; revision=463640